--- a/index.html
+++ b/index.html
@@ -271,11 +271,11 @@
         // Data Anda sudah dimasukkan di sini.
         let settings = { 
             sheetUrl: "https://docs.google.com/spreadsheets/d/1XvwgOUD0DM1kMWKHbOfqkuckY7vIW5_E94sENKprnb0/edit", 
-            geminiApiKey: "AIzaSyApredwnbrUDIJWuIUf3ykLbyDi8Qqt7N8", 
+            geminiApiKey: "AIzaSyCpXdeFbTEEgc_JrVxn3sMzQrHphEqhV7s", 
             appsScriptUrl: "https://script.google.com/macros/s/AKfycbxF__BjdvtfdfXLEkjLFzMjPk-mJu7IXcuuARUOh3ZkBvZF_OhwDilDzuTfm1x7sbpwdQ/exec", 
             teacherName: 'Sofiyan Hadi, S.Si.',
             examMaterial: '', 
-            examDuration: '30'
+            examDuration: ''
         };
         let isQuizActive = false;
         let timerInterval = null;
@@ -666,3 +666,4 @@
 </script>
 </body>
 </html>
+
